force-app/main/default/objects/prtl_FieldDisplay__mdt/prtl_FieldDisplay__mdt.object-meta.xml
<CustomObject>
    <label>prtl_FieldDisplay</label>
    <pluralLabel>prtl_FieldDisplay</pluralLabel>
</CustomObject>