force-app/main/default/objects/prtl_FieldDisplay__mdt/fields/ApplicationType__c.field-meta.xml
<CustomField>
    <fullName>ApplicationType__c</fullName>
    <description>This is part of the selection criteria, since some fields are not required for a renewal but are required for a new.</description>
    <label>ApplicationType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>Auction</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Premise Update</fullName>
            </value>
            <value>
                <fullName>Office Update</fullName>
            </value>
            <value>
                <fullName>Add Privileges</fullName>
            </value>
            <value>
                <fullName>Appeal</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Dram Shop Change</fullName>
            </value>
            <value>
                <fullName>Additional Locations</fullName>
            </value>
            <value>
                <fullName>Label Approval</fullName>
            </value>
            <value>
                <fullName>Keg Registration Stickers</fullName>
            </value>
            <value>
                <fullName>Transfer License</fullName>
            </value>
            <value>
                <fullName>Tax Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>