force-app/main/default/objects/prtl_FieldDisplay__mdt/fields/ApplicationTypeList__c.field-meta.xml
<CustomField>
    <fullName>ApplicationTypeList__c</fullName>
    <description>Formatted like a multi-select picklist.   Holds the possible application types that constraint this field definition.</description>
    <label>ApplicationTypeList</label>
    <length>255</length>
    <type>Text</type>
</CustomField>