force-app/main/default/objects/prtl_FieldDisplay__mdt/fields/Column__c.field-meta.xml
<CustomField>
    <fullName>Column__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Formatting information for this field on this license type</description>
    <label>Column</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>