force-app/main/default/objects/prtl_FieldDisplay__mdt/fields/ColumnOrder__c.field-meta.xml
<CustomField>
    <fullName>ColumnOrder__c</fullName>
    <description>Order within this column</description>
    <label>ColumnOrder</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>