force-app/main/default/objects/prtl_FieldDisplay__mdt/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <description>Holds the name of the field to display</description>
    <label>FieldName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>