force-app/main/default/objects/prtl_FieldDisplay__mdt/fields/IsReadOnly__c.field-meta.xml
<CustomField>
    <fullName>IsReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display only indicator</description>
    <label>IsReadOnly</label>
    <type>Checkbox</type>
</CustomField>