force-app/main/default/objects/prtl_FieldDisplay__mdt/fields/isRequired__c.field-meta.xml
<CustomField>
    <fullName>isRequired__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if the field is required for this license type</description>
    <label>isRequired</label>
    <type>Checkbox</type>
</CustomField>