force-app/main/default/objects/prtl_FieldDisplay__mdt/fields/LicenseTypeCode__c.field-meta.xml
<CustomField>
    <fullName>LicenseTypeCode__c</fullName>
    <description>List of licenses to constrain this field definition.  For this licensetype, for this applicationtype, display this field.</description>
    <label>LicenseTypeCode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>