force-app/main/default/objects/prtl_FieldDisplay__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>The name of the Salesforce Object that holds the field to display/update</description>
    <label>ObjectName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>